Change matches.getFirst() to matches.get(0)